// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchScreen.js should default valeus 1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value=""
        />
        <button
          className="btn btn-primary m-1"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7  animate__animated animate__fadeInLeft"
    >
      <h4>
        Results:
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Search a hero
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchScreen.js should error if dont found hero 1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value="batmannnn"
        />
        <button
          className="btn btn-primary m-1"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7  animate__animated animate__fadeInLeft"
    >
      <h4>
        Results:
      </h4>
      <hr />
      <div
        className="alert alert-danger"
      >
        THre is no a hero with
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchScreen.js should search some hero (batman) using queryString 1`] = `
<div>
  <h1>
    SearchScreen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          value="batman"
        />
        <button
          className="btn btn-primary m-1"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7  animate__animated animate__fadeInLeft"
    >
      <h4>
        Results:
      </h4>
      <hr />
      <div
        className="card"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row no-gutters"
        >
          <div
            className="com-md-4"
          >
            <img
              alt="dc-batman"
              className="card-img"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Batman
              </h5>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                  Detective Comics #27
                </small>
              </p>
              <a
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                Ver más...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
